updated UI + resultLabel

--- a/RockPaperScissors/Base.lproj/Main.storyboard
+++ b/RockPaperScissors/Base.lproj/Main.storyboard
@@ -20,17 +20,24 @@
                                 <rect key="frame" x="20" y="35" width="280" height="498"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bsp-1x-Dbd">
-                                        <rect key="frame" x="0.0" y="0.0" width="280" height="247"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="90"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="280" height="197"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="130"/>
                                         <state key="normal" title=" 🤡"/>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Let the battle begin" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k3k-sn-UNx">
-                                        <rect key="frame" x="0.0" y="247" width="280" height="100"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k3k-sn-UNx">
+                                        <rect key="frame" x="0.0" y="197" width="280" height="150"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="100" id="YXL-0r-ioT"/>
+                                            <constraint firstAttribute="height" constant="150" id="YXL-0r-ioT"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
+                                        <attributedString key="attributedText">
+                                            <fragment content="Let the battle begin">
+                                                <attributes>
+                                                    <color key="NSColor" red="0.1973995566" green="0.4543468356" blue="0.86278653139999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                    <font key="NSFont" size="25" name="MarkerFelt-Thin"/>
+                                                    <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                </attributes>
+                                            </fragment>
+                                        </attributedString>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="mYB-ep-u3I">
@@ -62,12 +69,26 @@
                                             </button>
                                         </subviews>
                                     </stackView>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2eL-Wo-dyK">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2eL-Wo-dyK">
                                         <rect key="frame" x="0.0" y="443" width="280" height="55"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="55" id="Bgi-6k-mRO"/>
                                         </constraints>
-                                        <state key="normal" title="Show result"/>
+                                        <state key="normal">
+                                            <attributedString key="attributedTitle">
+                                                <fragment content="Show results">
+                                                    <attributes>
+                                                        <color key="NSColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                                        <font key="NSFont" size="23" name="MarkerFelt-Thin"/>
+                                                    </attributes>
+                                                </fragment>
+                                            </attributedString>
+                                        </state>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <integer key="value" value="15"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
                                         <connections>
                                             <action selector="resetButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="jRV-Nl-zve"/>
                                         </connections>
